<?xml version="1.0" encoding="utf-8"?>


    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" >
        <item
            android:id="@+id/menu_help"
            android:title="@string/menu_help"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_forward"
            android:title="@string/menu_forward"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_permission"
            android:title="@string/menu_permission"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_update"
            android:title="@string/menu_update"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_about"
            android:title="@string/menu_about"
            app:showAsAction="never"/>
    </menu>

