<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:elevation="3dp"
        android:theme="@style/ThemeOverlay.AppCompat">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:fitsSystemWindows="true"

            app:collapsedTitleGravity="center_vertical"
            app:expandedTitleMarginEnd="48dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/NoSpaceActionBarTheme"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ToolbarPopupTheme" />

            <RelativeLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <FrameLayout
                    android:id="@+id/fl_photo"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_bg"
                        android:layout_width="match_parent"
                        android:background="@drawable/open_icon_bg"
                        android:layout_height="match_parent" />
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_photo"
                        android:visibility="gone"
                        android:scaleType="centerCrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/icon" />
                    <TextView
                        android:id="@+id/tv_start"
                        android:layout_width="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/color_00c853"
                        android:text="@string/start"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fl_photo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/default_desc"
                    android:textColor="@color/color_686f72"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/ll_bind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fl_photo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="14dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:drawableLeft="@drawable/icon_wechat"
                        android:drawablePadding="4dp"
                        android:textColor="@color/color_2c363a"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:text="@string/bind_desc"
                        android:textColor="@color/color_686f72"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            app:layout_scrollFlags="scroll"
            app:tabGravity="fill"
            android:elevation="3dp"
            app:tabIndicatorColor="@color/color_00c853"
            app:tabIndicatorHeight="2dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/color_2c363a"
            app:tabTextColor="@color/color_686f72" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        >

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
             />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@drawable/shadow"/>


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>